Fixed: menu buttons on mobile

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -268,8 +268,8 @@
     nav {
       ul {
         @include vendor('flex-direction', 'column');
-        min-width: 10rem;
         max-width: 100%;
+        align-items: center;
 
         li {
           border-left: 0;
